add documents center content